Fixed issues with margins and wrapping in flex.

--- a/module2/css/styles.css
+++ b/module2/css/styles.css
@@ -89,11 +89,18 @@ body {
 #receips {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 20px;
 }
 
 section {
+    margin: 20px 0px 0px 0px;
+}
+
+section > article {
     background-color: lightgoldenrodyellow;
     border: 1px solid black;
+    margin: 0px 20px 0px 0px;
+    height: 100%;
 }
 
 section h2 {    
